[#12750] refactor(core): use a single withHiddenProperties(Entry) API
Avoid Set vs Entry overloads; dispatchers already pass classifyHiddenProperties
results as Map.Entry.

Co-authored-by: Cursor <cursoragent@cursor.com>